--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SL Educar</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"> 
     <link rel="stylesheet" href="./assets/css/base/base.css">
     <link rel="stylesheet" href="./assets/css/cadastro.css">
     <link rel="stylesheet" href="./assets/css/componentes/cartao.css">
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="./assets/css/componentes/botao.css">
     <link rel="stylesheet" href="./node_modules/flipdown/src/flipdown.css">
     <script type="text/javascript" src="/node_modules/flipdown/src/flipdown.js"></script>
+    <script type="text/javascript" src="node_modules/flipdown/example/js/flipdown/flipdown.js"></script>
+    <script type="text/javascript" src="node_modules/flipdown/example/js/main.js"></script>
 </head>
 <body>
     <main class="container flex flex--coluna flex--centro">
