--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <link rel="stylesheet" href="./assets/css/componentes/inputs.css">
     <link rel="stylesheet" href="./assets/css/componentes/botao.css">
     <link rel="stylesheet" href="./node_modules/flipdown/src/flipdown.css">
-    <script type="text/javascript" src="/node_modules/flipdown/src/flipdown.js"></script>
-    <script type="text/javascript" src="node_modules/flipdown/example/js/flipdown/flipdown.js"></script>
-    <script type="text/javascript" src="node_modules/flipdown/example/js/main.js"></script>
+    <script type="text/javascript" src="./node_modules/flipdown/src/flipdown.js"></script>
+    <script type="text/javascript" src="./node_modules/flipdown/example/js/flipdown/flipdown.js"></script>
+    <script type="text/javascript" src="./node_modules/flipdown/example/js/main.js"></script>
 </head>
 <body>
     <main class="container flex flex--coluna flex--centro">
