--- a/index.html
+++ b/index.html
@@ -4,10 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SL Educar</title>
-    <link rel="stylesheet" type="text/css" href="node_modules/flipdown/example/css/flipdown/flipdown.css">
-    <link rel="stylesheet" type="text/css" href="node_modules/flipdown/example/css/style.css">	
-    <script type="text/javascript" src="node_modules/flipdown/example/js/flipdown/flipdown.js"></script>
-    <script type="text/javascript" src="node_modules/flipdown/example/js/main.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"> 
     <link rel="stylesheet" href="./assets/css/base/base.css">
@@ -16,6 +12,17 @@
     <link rel="stylesheet" href="./assets/css/componentes/inputs.css">
     <link rel="stylesheet" href="./assets/css/componentes/botao.css">
     <link rel="stylesheet" href="./assets/css/componentes/pessoa-imagem.css">
+    <!-- <link rel="stylesheet" type="text/css" href="node_modules/flipdown/example/css/flipdown/flipdown.css">
+    <link rel="stylesheet" type="text/css" href="node_modules/flipdown/example/css/style.css">	
+    <script type="text/javascript" src="node_modules/flipdown/example/js/flipdown/flipdown.js"></script> -->
+
+    <!-- <link rel="stylesheet" type="text/css" href="css/flipdown/flipdown.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <script type="text/javascript" src="js/flipdown/flipdown.js"></script> -->
+    <link rel="stylesheet" href="/node_modules/flipdown/dist/flipdown.css">
+    <link rel="stylesheet" href="/node_modules/flipdown/dist/flipdown.min.css">
+    <script type="text/javascript" src="/node_modules/flipdown/dist/flipdown.js"></script>
+    <script type="text/javascript" src="/node_modules/flipdown/dist/flipdown.min.js"></script>
     <!-- <link rel="stylesheet" href="/node_modules/flipdown/src/flipdown.css">
     <script type="text/javascript" src="/node_modules/flipdown/src/flipdown.js"></script> -->
 </head>
