--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./assets/css/componentes/inputs.css">
     <link rel="stylesheet" href="./assets/css/componentes/botao.css">
     <link rel="stylesheet" href="./assets/css/componentes/pessoa-imagem.css">
-    <link rel="stylesheet" href="/node_modules/flipdown/dist/flipdown.css">
+    <link rel="stylesheet" href="./node_modules/flipdown/dist/flipdown.css">
     <!-- <link rel="stylesheet" href="/node_modules/flipdown/src/flipdown.css">
     <script type="text/javascript" src="/node_modules/flipdown/src/flipdown.js"></script> -->
 </head>
