--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <link rel="stylesheet" href="./assets/css/componentes/inputs.css">
     <link rel="stylesheet" href="./assets/css/componentes/botao.css">
     <link rel="stylesheet" href="./assets/css/componentes/pessoa-imagem.css">
-    <link rel="stylesheet" href="./node_modules/flipdown/dist/flipdown.css">
+    <link rel="stylesheet" href="./assets/css/flipdown.css">
+    <script type="text/javascript" src="/assets/css/flipdown.js"></script>
+    <!-- <link rel="stylesheet" href="./node_modules/flipdown/dist/flipdown.css">
+    <script type="text/javascript" src="/node_modules/flipdown/dist/flipdown.js"></script> -->
     <!-- <link rel="stylesheet" href="/node_modules/flipdown/src/flipdown.css">
     <script type="text/javascript" src="/node_modules/flipdown/src/flipdown.js"></script> -->
 </head>
@@ -93,7 +96,6 @@
         </div>
 
     </main>
-    <script type="text/javascript" src="/node_modules/flipdown/dist/flipdown.js"></script>
     <script src="./js/app.js" type="module"></script>
     <!-- <script src="./node_modules/nodemailer/lib/nodemailer.js" type="module"></script> -->
 </body>
