--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <link rel="stylesheet" href="./assets/css/componentes/botao.css">
     <link rel="stylesheet" href="./assets/css/componentes/pessoa-imagem.css">
     <link rel="stylesheet" href="./assets/css/flipdown.css">
-    <script type="text/javascript" src="/assets/css/flipdown.js"></script>
+    <script type="text/javascript" src="/js/flipdown.js"></script>
+    <script src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script>
     <!-- <link rel="stylesheet" href="./node_modules/flipdown/dist/flipdown.css">
     <script type="text/javascript" src="/node_modules/flipdown/dist/flipdown.js"></script> -->
     <!-- <link rel="stylesheet" href="/node_modules/flipdown/src/flipdown.css">
@@ -45,7 +46,7 @@
 
         <section class="cartao">
             <h2 class="cartao__titulo">Para receber o material complementar da aula, inscreva-se:</h2>
-            <form action="./cadastro_concluido.html" class="formulario flex flex--coluna">
+            <form action="" class="formulario flex flex--coluna">
                 <fieldset>
                     <legend class="formulario__legenda">Informações pessoais:</legend>
                     <div class="input-container">
