--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <main class="container flex flex--coluna flex--centro">
         <div class="cadastro-cabecalho">
-            <img src="./assets/img/logo-sl.jpg" alt="Logo SL Educar" class="cadastro-cabecalho__logo">
+            <img src="./assets/img/logo-sl.png" alt="Logo SL Educar" class="cadastro-cabecalho__logo">
         </div>
 
         <div class="cartao flex--centro">
