--- a/index.html
+++ b/index.html
@@ -49,44 +49,12 @@
 
         <section class="cartao">
             <h2 class="cartao__titulo">Para receber o material complementar da aula, inscreva-se:</h2>
-            <form action="./cadastro_concluido.html" class="formulario flex flex--coluna">
-                <fieldset>
-                    <legend class="formulario__legenda">Informações pessoais:</legend>
-                    <div class="input-container">
-                        <input name="nome" id="nome" class="input" type="text" placeholder="Nome" data-tipo="nome" required>
-                        <label class="input-label" for="nome">Nome</label>
-                        <span class="input-mensagem-erro">Este campo não está válido</span>
-                    </div>
-                    <div class="input-container">
-                        <input name="email" id="email" class="input" type="email" placeholder="Email" data-tipo="email" required>
-                        <label class="input-label" for="email">Email</label>
-                        <span class="input-mensagem-erro">Este campo não está válido</span>
-                    </div>
-                    <div class="input-container">
-                        <input name="email" id="email" class="input" type="text" placeholder="Cidade" data-tipo="nome" required>
-                        <label class="input-label" for="nome">Cidade</label>
-                        <span class="input-mensagem-erro">Este campo não está válido</span>
-                    </div>
-                </fieldset> 
-                <fieldset>
-                    <legend class="formulario__legenda">Última Titulação Acadêmica:</legend>
-                    <div class="input-div-select">
-                        <select>
-                            <option >Ensino médio</option>
-                            <option selected>Graduação</option>
-                            <option >Mestrado</option>
-                            <option >Doutorado</option>
-                        </select>
-                    </div>                    
-                </fieldset>
-                <label>
-                    <input type="checkbox" name="" class="formulario__legenda" checked> Gostaria de receber notícias por email?
-                </label>
-                <button class="botao" id="enviarEmail">Receber material</a></button>
-            </form>
+            <div style="display: flex;    justify-content: center;">
+                <a href="https://us20.list-manage.com/contact-form?u=c473ddfdfc377a9c051740fad&form_id=a81f3baee1ce98d1d0a88312c1ae4ad8" target="_blank" class="botao" id="enviarEmail2">Receber material</a>
+            </div>
             <p>*Se não receber o material, verifique sua caixa de SPAM.</p>
         </section>
-
+        
         <div class="cartao">
             <h2 class="quemSomos">Quem é Stephane Hilda Barbosa Lima?</h2>
             <div class="quemSomos">
