--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SL Educar</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"> 
+    <link href="https://fonts.googleapis.com/css2?family=Belleza&family=Rosario:ital@1&family=Ruda:wght@700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="./assets/css/base/base.css">
     <link rel="stylesheet" href="./assets/css/cadastro.css">
     <link rel="stylesheet" href="./assets/css/componentes/cartao.css">
@@ -21,11 +20,14 @@
     <script type="text/javascript" src="/node_modules/flipdown/src/flipdown.js"></script> -->
 </head>
 <body>
+    <header>
+        <section>
+            <div class="cadastro-cabecalho">
+                <img src="./assets/img/logo-sl.png" alt="Logo SL Educar" class="cadastro-cabecalho__logo">
+            </div>
+        </section>        
+    </header>
     <main class="container flex flex--coluna flex--centro">
-        <div class="cadastro-cabecalho">
-            <img src="./assets/img/logo-sl.png" alt="Logo SL Educar" class="cadastro-cabecalho__logo">
-        </div>
-
         <div class="cartao flex--centro">
             <h2 class="cartao__titulo">DELIMITE SEUS OBJETIVO DE PESQUISA COMIGO!</h2>
             <p>CLIQUE E ASSISTA À AULA GRATUITAMENTE ABAIXO E DESCUBRA COMO ESCOLHER UM PROBLEMA DE PESQUISA QUE FAÇA SENTIDO PARA A SUA TRAJETÓRIA PROFISSIONAL</p>
@@ -101,6 +103,17 @@
         </div>
 
     </main>
+    <footer>
+        <section>
+            <div>
+                <img src="./assets/img/logo-sl.png" alt="Logo SL Educar" class="cadastro-cabecalho__logo">
+            </div>
+            <div>
+                <p>© 2022 – SL Educar - Educação e Direito Digital</p>
+                <p>CNPJ: 37.535.343/0001-60</p>
+            </div>
+        </section>
+    </footer>
     <script src="./js/app.js" type="module"></script>
     <!-- <script src="./node_modules/nodemailer/lib/nodemailer.js" type="module"></script> -->
 </body>
