--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="./assets/css/componentes/pessoa-imagem.css">
     <link rel="stylesheet" href="./assets/css/flipdown.css">
     <script type="text/javascript" src="/js/flipdown.js"></script>
-    <script src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script>
     <!-- <link rel="stylesheet" href="./node_modules/flipdown/dist/flipdown.css">
     <script type="text/javascript" src="/node_modules/flipdown/dist/flipdown.js"></script> -->
     <!-- <link rel="stylesheet" href="/node_modules/flipdown/src/flipdown.css">
@@ -52,6 +51,14 @@
 
         <section class="cartao">
             <h2 class="cartao__titulo">Para receber o material complementar da aula, inscreva-se:</h2>
+            <div style="display: flex;    justify-content: center;">
+                <a href="https://us20.list-manage.com/contact-form?u=c473ddfdfc377a9c051740fad&form_id=a81f3baee1ce98d1d0a88312c1ae4ad8" target="_blank" class="botao" id="enviarEmail2">Receber material</a>
+            </div>
+            <p>*Se não receber o material, verifique sua caixa de SPAM.</p>
+        </section>
+
+        <!-- <section class="cartao">
+            <h2 class="cartao__titulo">Para receber o material complementar da aula, inscreva-se:</h2>
             <form action="" class="formulario flex flex--coluna">
                 <fieldset>
                     <legend class="formulario__legenda">Informações pessoais:</legend>
@@ -88,7 +95,7 @@
                 <button class="botao" id="enviarEmail">Receber material</a></button>
             </form>
             <p>*Se não receber o material, verifique sua caixa de SPAM.</p>
-        </section>
+        </section> -->
 
         <div class="cartao">
             <h2 class="quemSomos">Quem é Stephane Hilda Barbosa Lima?</h2>
