--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
     <script type="text/javascript" src="/js/flipdown.js"></script>
 </head>
 <body>
-    <header>
+    <header class="cadastro-cabecalho">
         <section>
-            <div class="cadastro-cabecalho">
+            <div>
                 <img src="./assets/img/logo-sl.png" alt="Logo SL Educar" class="cadastro-cabecalho__logo">
             </div>
         </section>        
     </header>
     <main class="container flex flex--coluna flex--centro">
         <section>
-            <div class="cartao-vazio flex--centro">
+            <div class="cartao-vazio flex--centro cadastro-topo">
                 <h2 class="cartao__titulo">DELIMITE SEUS OBJETIVO DE PESQUISA COMIGO!</h2>
-                <p class="cartao__subtitulo">CLIQUE E ASSISTA À AULA GRATUITAMENTE ABAIXO E DESCUBRA COMO ESCOLHER UM PROBLEMA DE PESQUISA QUE FAÇA SENTIDO PARA A SUA TRAJETÓRIA PROFISSIONAL</p>
+                <p class="cartao__subtitulo">Clique e assista gratuitamente à aula e descubra como escolher um problema de pesquisa que faça sentido para sua vida.</p>
             </div>
         </section>
         
@@ -125,7 +125,7 @@
             <div>
                 <img src="./assets/img/logo-sl.png" alt="Logo SL Educar" class="cadastro-rodape__logo">
             </div>
-            <div>
+            <div class="cadastro-rodape__dadosEmpresa">
                 <p>© 2022 – SL Educar - Educação e Direito Digital</p>
                 <p>CNPJ: 37.535.343/0001-60</p>
             </div>
