--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                             <input type="text" name="PHONE" class="" value="" id="mce-PHONE">
                         </div>
                         <div class="mc-field-group">
-                            <label for="mce-ENSINO">Última Titulação (Graduação, Mestrado, Doutorado...)</label>
-                            <input type="text" value="" name="ENSINO" class="" id="mce-ENSINO">
+                            <label for="mce-ENSINO">Última Titulação (Graduação, Mestrado, Doutorado...) <span class="asterisk">*</span></label>
+                            <input type="text" value="" name="ENSINO" class="required" id="mce-ENSINO">
                         </div>
                         <div id="mce-responses" class="clear foot">
                             <div class="response" id="mce-error-response" style="display:none"></div>
