--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
 
         <section class="videoSobre">
             <div class="container container--video">
-                <iframe class="videoSobre_iframe" width="600" height="400"
-                    src="https://www.youtube.com/watch?v=cDxtH3PWWU4&ab_channel=StephaneLima"
-                    title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+                <iframe class="videoSobre_iframe" width="600" height="400" src="https://www.youtube.com/embed/cDxtH3PWWU4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </section>
 
@@ -85,8 +83,8 @@
                             <input type="text" value="" name="LNAME" class="required" id="mce-LNAME">
                         </div>
                         <div class="mc-field-group size1of2">
-                            <label for="mce-PHONE">Telefone </label>
-                            <input type="text" name="PHONE" class="" value="" id="mce-PHONE">
+                            <label for="mce-PHONE">Whatsapp</label>
+                            <input type="text" name="PHONE" class="" value="" id="mce-PHONE" placeholder="(XX) XXXXX-XXXX">
                         </div>
                         <div class="mc-field-group">
                             <label for="mce-ENSINO">Última Titulação (Graduação, Mestrado, Doutorado...) <span class="asterisk">*</span></label>
@@ -142,7 +140,7 @@
                 <a href="https://us20.list-manage.com/contact-form?u=c473ddfdfc377a9c051740fad&form_id=a81f3baee1ce98d1d0a88312c1ae4ad8"
                     target="_blank" class="botao" id="enviarEmail2">Receber material</a>
             </div> -->
-            <p>*Se não receber o material, verifique sua caixa de SPAM.</p>
+            <p>*Se não receber o material em até 24hrs, verifique sua caixa de SPAM.</p>
         </section>
 
 
@@ -214,7 +212,7 @@
                 </div>
                 <div class="quemSomos__contato">
                     <p>Conheça meu trabalho:</p>
-                    <p>Instagram: <a href="https://www.instagram.com/stephanelimab/">@stephanelimab</a></p>
+                    <p>Instagram: <a id="instagram" href="https://www.instagram.com/stephanelimab/">@stephanelimab</a></p>
                     <p>Publicações: <a
                             href="https://linktree.com.br/new/stephanelimab">https://linktree.com.br/new/stephanelimab</a>
                     </p>
