--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                 <div class="quemSomos__contato">
                     <p>Conheça meu trabalho:</p>
                     <p>Instagram: <a id="instagram" href="https://www.instagram.com/stephanelimab/">@stephanelimab</a></p>
-                    <p>Publicações: <a
+                    <p>Publicações: <a id="linktree"
                             href="https://linktree.com.br/new/stephanelimab">https://linktree.com.br/new/stephanelimab</a>
                     </p>
                 </div>
