--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <div class="container container--flip">
                     <div id="flipdown" class="flipdown cadastro-flipdown flipdown__theme-light"></div>
                 </div>
-                <p class="cadastro-flipdown__texto">*Após esse período, a aula será disponível apenas exclusivamente aos
+                <p class="cadastro-flipdown__texto">*Após esse período, a aula será disponível exclusivamente aos
                     meus mentorandos.</p>
             </div>
         </section>
