--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="cartao-vazio flex--centro cadastro-topo">
                 <h2 class="cartao__titulo">DELIMITE SEUS OBJETIVO DE PESQUISA COMIGO!</h2>
                 <p class="cartao__subtitulo">Clique e assista gratuitamente à aula e descubra como escolher um problema
-                    de pesquisa que faça sentido para sua vida.</p>
+                    de pesquisa que faça sentido para sua vida].</p>
             </div>
         </section>
 
@@ -165,51 +165,6 @@
             </div>
         </section>
 
-        <!-- <section>
-            <div class="cartao-vazio flex--centro">
-                <h1 class="cartao__titulo ">FAÇA SUA PESQUISA TER SENTIDO NA SUA VIDA</h1>
-            </div>
-        </section> -->
-
-        <!-- <section class="cartao">
-            <h2 class="cartao__titulo">Para receber o material complementar da aula, inscreva-se:</h2>
-            <form action="" class="formulario flex flex--coluna">
-                <fieldset>
-                    <legend class="formulario__legenda">Informações pessoais:</legend>
-                    <div class="input-container">
-                        <input name="nome" id="nome" class="input" type="text" placeholder="Nome" data-tipo="nome" required>
-                        <label class="input-label" for="nome">Nome</label>
-                        <span class="input-mensagem-erro">Este campo não está válido</span>
-                    </div>
-                    <div class="input-container">
-                        <input name="email" id="email" class="input" type="email" placeholder="Email" data-tipo="email" required>
-                        <label class="input-label" for="email">Email</label>
-                        <span class="input-mensagem-erro">Este campo não está válido</span>
-                    </div>
-                    <div class="input-container">
-                        <input name="email" id="email" class="input" type="text" placeholder="Cidade" data-tipo="nome" required>
-                        <label class="input-label" for="nome">Cidade</label>
-                        <span class="input-mensagem-erro">Este campo não está válido</span>
-                    </div>
-                </fieldset> 
-                <fieldset>
-                    <legend class="formulario__legenda">Última Titulação Acadêmica:</legend>
-                    <div class="input-div-select">
-                        <select>
-                            <option >Ensino médio</option>
-                            <option selected>Graduação</option>
-                            <option >Mestrado</option>
-                            <option >Doutorado</option>
-                        </select>
-                    </div>                    
-                </fieldset>
-                <label>
-                    <input type="checkbox" name="" class="formulario__legenda" checked> Gostaria de receber notícias por email?
-                </label>
-                <button class="botao" id="enviarEmail">Receber material</a></button>
-            </form>
-            <p>*Se não receber o material, verifique sua caixa de SPAM.</p>
-        </section> -->
         <section>
             <div class="cartao">
                 <h2 class="quemSomos__titulo">Olá, sou Stephane Hilda Barbosa Lima</h2>
