--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SL Educar</title>
+    <link rel="shortcut icon" href="/assets/img/favicon.ico"/>
     <link href="https://fonts.googleapis.com/css?family=Pacifico|Roboto:100,300,400,500,700,900" rel="stylesheet" />
     <link
         href="https://fonts.googleapis.com/css2?family=Belleza&family=Rosario:ital@1&family=Ruda:wght@700&display=swap"
