--- a/index.html
+++ b/index.html
@@ -31,22 +31,28 @@
     <main class="container flex flex--coluna flex--centro">
         <section>
             <div class="cartao-vazio flex--centro cadastro-topo">
-                <h2 class="cartao__titulo">DELIMITE SEUS OBJETIVO DE PESQUISA COMIGO!</h2>
-                <p class="cartao__subtitulo">Clique e assista gratuitamente à aula e descubra como escolher um problema
-                    de pesquisa que faça sentido para sua vida].</p>
+                <h2 class="cartao__titulo">DELIMITE SEUS OBJETIVOS DE PESQUISA COMIGO!</h2>
+                <p class="cartao__subtitulo">Auxilio pesquisadores e professores da área jurídica a verem sentido em seus trabalhos através de uma formação profissional e humana de excelência.</p>
             </div>
         </section>
 
 
         <section class="videoSobre">
-            <div class="container container--video">
-                <!-- <iframe class="videoSobre_iframe" width="600" height="400" src="https://www.youtube.com/embed/cDxtH3PWWU4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
-            </div>
+            <div class="container container--foto">
+                <img src="./assets/img/foto-aulao.jpg" alt="Foto Aulao" class="foto__principal">
+               </div>
         </section>
+
+        <!-- <section class="videoSobre">
+            <div class="container container--video">
+                <iframe class="videoSobre_iframe" width="600" height="400" src="https://www.youtube.com/embed/cDxtH3PWWU4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </section> -->
 
 
         <section class="cartao">
-            <h2 class="cartao__titulo-botao">Para receber o material complementar da aula, inscreva-se:</h2>
+            <h2 class="cartao__titulo-botao">Descubra seis áreas que você precisa levar em consideração para ter sucesso na delimitação de sua pesquisa acadêmica. </h2>
+            <h2 class="cartao__titulo-inscrever">Inscreva-se para receber o mapa mental:</h2>
 
             <!-- Begin Mailchimp Signup Form -->
             <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7_dtp.css" rel="stylesheet" type="text/css">
@@ -65,8 +71,6 @@
                         padding: 0 0rem;
 	                }
                 }
-
-
 
                 /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
 	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
@@ -153,9 +157,7 @@
             <p>*Se não receber o material em até 24hrs, verifique sua caixa de SPAM.</p>
         </section>
 
-
-
-        <section>
+        <!-- <section>
             <div class="cartao-vazio">
                 <h1 class="cartao__titulo">DISPONÍVEL POR TEMPO LIMITADO*</h1>
                 <div class="container container--flip">
@@ -164,12 +166,14 @@
                 <p class="cadastro-flipdown__texto">*Após esse período, a aula será disponível exclusivamente aos
                     meus mentorandos.</p>
             </div>
-        </section>
+        </section> -->
 
         <section>
             <div class="cartao">
                 <h2 class="quemSomos__titulo">Olá, sou Stephane Hilda Barbosa Lima</h2>
                 <div class="quemSomos">
+                    <p class="quemsSomos__predescricao">Busco auxiliar pesquisadores e professores de direito a não sofrerem tanto e a criarem um plano de carreira que faça sentido para sua vida.</p>
+                    <p class="quemsSomos__predescricao" style="margin: 0 0 2rem 0;">Posso te ajudar?</p>
                     <div class="pessoa__imagem pessoa__imagem--stephane"></div>
                     <p class="quemsSomos__descricao">Professora universitária de Direitos Fundamentais na UNDB,
                         doutoranda em Direito do Estado na Universidade de São Paulo (USP), ex-pesquisadora da FGV
