--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <section class="videoSobre">
             <div class="container container--foto">
-                <img src="./assets/img/foto-aulao.jpg" alt="Foto Aulao" class="foto__principal">
+                <img src="./assets/img/foto-aulao2.jpeg" alt="Foto Aulao" class="foto__principal">
                </div>
         </section>
 
