--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Auxilio pesquisadores e professores da área jurídica a verem sentido em seus trabalhos através de uma formação profissional e humana de excelência.">
+    <meta name="keywords" content="Pesquisa, Mentoria, Direito">
+    <meta name="author" content="Stephane Lima">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SL Educar</title>
+    <title>Stephane Lima</title>
     <link rel="shortcut icon" href="/assets/img/favicon.ico"/>
     <link href="https://fonts.googleapis.com/css?family=Pacifico|Roboto:100,300,400,500,700,900" rel="stylesheet" />
     <link
@@ -25,11 +28,12 @@
     <header class="cadastro-cabecalho">
         <section>
             <div>
-                <img src="./assets/img/logo-sl.png" alt="Logo SL Educar" class="cadastro-cabecalho__logo">
+                <img src="./assets/img/logo-sl.png" alt="Logo Stephane Lima" class="cadastro-cabecalho__logo">
             </div>
         </section>
     </header>
     <main class="container flex flex--coluna flex--centro">
+        <h1 style="display: none;">Stephane Lima</h1>
         <section>
             <div class="cartao-vazio flex--centro cadastro-topo">
                 <h2 class="cartao__titulo">DELIMITE SEUS OBJETIVOS DE PESQUISA COMIGO!</h2>
@@ -40,7 +44,7 @@
 
         <section class="videoSobre">
             <div class="container container--foto">
-                <img src="./assets/img/foto-aulao2.jpeg" alt="Foto Aulao" class="foto__principal">
+                <img src="./assets/img/foto-aulao2.jpeg" alt="Foto Aulão Stephane Lima" class="foto__principal">
                </div>
         </section>
 
@@ -195,7 +199,7 @@
     <footer>
         <section class="cadastro-rodape">
             <div>
-                <img src="./assets/img/logo-sl.png" alt="Logo SL Educar" class="cadastro-rodape__logo">
+                <img src="./assets/img/logo-sl.png" alt="Logo Stephane Lima" class="cadastro-rodape__logo">
             </div>
             <div class="cadastro-rodape__dadosEmpresa">
                 <p>© 2022 – SL Educar - Educação e Direito Digital</p>
