--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="./assets/css/componentes/botao.css">
     <link rel="stylesheet" href="./assets/css/componentes/pessoa-imagem.css">
     <link rel="stylesheet" href="./assets/css/flipdown.css">
-    <meta name="google-site-verification" content="palv4tXAyxoArLTNc5ti2o0Vwh-Ngr5VGEktVD4cnY0" />
+    <!-- <meta name="google-site-verification" content="palv4tXAyxoArLTNc5ti2o0Vwh-Ngr5VGEktVD4cnY0" /> -->
     <script type="text/javascript" src="/js/flipdown.js"></script>
 </head>
 
