--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Auxilio pesquisadores e professores da área jurídica a verem sentido em seus trabalhos através de uma formação profissional e humana de excelência.">
+    <meta name="description" content="Stephane Lima: Auxilio pesquisadores e professores da área jurídica a verem sentido em seus trabalhos através de uma formação profissional e humana de excelência.">
     <meta name="keywords" content="Pesquisa, Mentoria, Direito">
     <meta name="author" content="Stephane Lima">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
