ajuste width foto

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 
 
         <section class="videoSobre">
-            <div class="container container--foto">
+            <div class="container--foto">
                 <img src="./assets/img/foto-aulao2.jpeg" alt="Foto Aulão Stephane Lima" class="foto__principal">
-               </div>
+            </div>
         </section>
 
         <!-- <section class="videoSobre">
@@ -176,7 +176,7 @@
                 <a href="https://us20.list-manage.com/contact-form?u=c473ddfdfc377a9c051740fad&form_id=a81f3baee1ce98d1d0a88312c1ae4ad8"
                     target="_blank" class="botao" id="enviarEmail2">Receber material</a>
             </div> -->
-            <p>*Se não receber o material em até 24hrs, verifique sua caixa de SPAM.</p>
+            <p>*Se não receber o material, verifique sua caixa de SPAM.</p>
         </section>
 
         <!-- <section>
