--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Belleza&family=Rosario:ital@1&family=Ruda:wght@700&display=swap"
         rel="stylesheet">
+        
+    <link rel="stylesheet" href="./assets/css/base/_reset.css">
+    <link rel="stylesheet" href="./assets/css/base/_variaveis.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/base/base.css">
     <link rel="stylesheet" href="./assets/css/cadastro.css">
     <link rel="stylesheet" href="./assets/css/componentes/cartao.css">
@@ -20,24 +24,20 @@
     <link rel="stylesheet" href="./assets/css/componentes/botao.css">
     <link rel="stylesheet" href="./assets/css/componentes/pessoa-imagem.css">
     <link rel="stylesheet" href="./assets/css/flipdown.css">
-    <!-- <meta name="google-site-verification" content="palv4tXAyxoArLTNc5ti2o0Vwh-Ngr5VGEktVD4cnY0" /> -->
     <script type="text/javascript" src="/js/flipdown.js"></script>
     <!-- Facebook Pixel Code -->
     <script>
-    !function(f,b,e,v,n,t,s)
-    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-    n.queue=[];t=b.createElement(e);t.async=!0;
-    t.src=v;s=b.getElementsByTagName(e)[0];
-    s.parentNode.insertBefore(t,s)}(window, document,'script',
-    'https://connect.facebook.net/en_US/fbevents.js');
-    fbq('init', '242744084639042');
-    fbq('track', 'PageView');
+        !function(f,b,e,v,n,t,s)
+        {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+        n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+        if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+        n.queue=[];t=b.createElement(e);t.async=!0;
+        t.src=v;s=b.getElementsByTagName(e)[0];
+        s.parentNode.insertBefore(t,s)}(window, document,'script','https://connect.facebook.net/en_US/fbevents.js');
+        fbq('init', '242744084639042');
+        fbq('track', 'PageView');
     </script>
-    <noscript><img height="1" width="1" style="display:none"
-    src="https://www.facebook.com/tr?id=242744084639042&ev=PageView&noscript=1"
-    /></noscript>
+    <noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=242744084639042&ev=PageView&noscript=1"/></noscript>
     <!-- End Facebook Pixel Code -->
 </head>
 
@@ -83,7 +83,7 @@
                     background: #E5e0ca;
                     clear: left;
                     font: 14px Helvetica, Arial, sans-serif;
-                    width: 80%;
+                    width: 100%;
                     padding: 0 4rem;
                 }
 
@@ -95,12 +95,13 @@
                 }
 
                 /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
-	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+	            We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
             </style>
             <div id="mc_embed_signup">
-                <form
-                    action="https://gmail.us20.list-manage.com/subscribe/post?u=c473ddfdfc377a9c051740fad&amp;id=d35fb3291a"
-                    method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
+                <!-- action="https://gmail.us20.list-manage.com/subscribe/post?u=c473ddfdfc377a9c051740fad&amp;id=d35fb3291a" -->
+                <form                    
+                    action=""
+                    method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate needs-validation"
                     target="_blank" novalidate>
                     <div id="mc_embed_signup_scroll">
 
@@ -108,23 +109,23 @@
                         <div class="mc-field-group">
                             <label for="mce-EMAIL">Email <span class="asterisk">*</span>
                             </label>
-                            <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+                            <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" required>
                         </div>
                         <div class="mc-field-group">
                             <label for="mce-FNAME">Nome <span class="asterisk">*</span> </label> 
-                            <input type="text" value="" name="FNAME" class="required" id="mce-FNAME">
+                            <input type="text" value="" name="FNAME" class="required" id="mce-FNAME" required>
                         </div>
                         <div class="mc-field-group">
                             <label for="mce-LNAME">Sobrenome <span class="asterisk">*</span></label>
-                            <input type="text" value="" name="LNAME" class="required" id="mce-LNAME">
+                            <input type="text" value="" name="LNAME" class="required" id="mce-LNAME" required>
                         </div>
                         <div class="mc-field-group size1of2">
-                            <label for="mce-PHONE">Whatsapp</label>
+                            <label for="mce-PHONE">WhatsApp</label>
                             <input type="text" name="PHONE" class="" value="" id="mce-PHONE" placeholder="(XX) XXXXX-XXXX">
                         </div>
                         <div class="mc-field-group">
                             <label for="mce-ENSINO">Última Titulação (Graduação, Mestrado, Doutorado...) <span class="asterisk">*</span></label>
-                            <input type="text" value="" name="ENSINO" class="required" id="mce-ENSINO">
+                            <input type="text" value="" name="ENSINO" class="required" id="mce-ENSINO" required>
                         </div>
                         <div id="mce-responses" class="clear foot">
                             <div class="response" id="mce-error-response" style="display:none"></div>
@@ -136,48 +137,102 @@
                         <div class="optionalParent">
                             <div class="clear foot" style="display: flex;  justify-content: center;">
                                 <input type="submit" value="Receber material" name="subscribe"
-                                    id="mc-embedded-subscribe" class="botao" style="border-radius: 10px; width:400px">
+                                    id="mc-embedded-subscribe" class="botao" style="border-radius: 10px; width:400px" >
                                 <!-- <p class="brandingLogo"><a href="http://eepurl.com/hPs1-H" title="Mailchimp - email marketing made easy and fun"><img src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_dark_dtp.svg"></a></p> -->
                             </div>
                         </div>
+                        <!-- Button trigger modal -->
+                        <!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                            Launch demo modal
+                        </button> -->
                     </div>
                 </form>
             </div>
+
+            <script> 
+                // Example starter JavaScript for disabling form submissions if there are invalid fields
+                (function() {
+                  'use strict';
+                    window.addEventListener('load', function() {
+                    // Fetch all the forms we want to apply custom Bootstrap validation styles to
+                    var forms = document.getElementsByClassName('needs-validation');
+                    // Loop over them and prevent submission
+                    var validation = Array.prototype.filter.call(forms, function(form) {
+                      form.addEventListener('submit', function(event) {
+                        if (form.checkValidity() === false) {
+                            event.preventDefault();
+                            event.stopPropagation();
+                        } else {
+                            form.classList.add('was-validated');
+                            event.preventDefault();
+                            $("#exampleModal").modal("show");
+                        }
+                      }, false);
+                    });
+                    }, false);
+                })();
+            </script>
+
             <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
             <script type='text/javascript'>(function ($) {
-                    window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; fnames[6] = 'ENSINO'; ftypes[6] = 'text'; /**
- * Translated default messages for the $ validation plugin.
- * Locale: PT_PT
- */
-                    $.extend($.validator.messages, {
-                        required: "Campo de preenchimento obrigat&oacute;rio.",
-                        remote: "Por favor, corrija este campo.",
-                        email: "Por favor, introduza um endere&ccedil;o eletr&oacute;nico v&aacute;lido.",
-                        url: "Por favor, introduza um URL v&aacute;lido.",
-                        date: "Por favor, introduza uma data v&aacute;lida.",
-                        dateISO: "Por favor, introduza uma data v&aacute;lida (ISO).",
-                        number: "Por favor, introduza um n&uacute;mero v&aacute;lido.",
-                        digits: "Por favor, introduza apenas d&iacute;gitos.",
-                        creditcard: "Por favor, introduza um n&uacute;mero de cart&atilde;o de cr&eacute;dito v&aacute;lido.",
-                        equalTo: "Por favor, introduza de novo o mesmo valor.",
-                        accept: "Por favor, introduza um ficheiro com uma extens&atilde;o v&aacute;lida.",
-                        maxlength: $.validator.format("Por favor, n&atilde;o introduza mais do que {0} caracteres."),
-                        minlength: $.validator.format("Por favor, introduza pelo menos {0} caracteres."),
-                        rangelength: $.validator.format("Por favor, introduza entre {0} e {1} caracteres."),
-                        range: $.validator.format("Por favor, introduza um valor entre {0} e {1}."),
-                        max: $.validator.format("Por favor, introduza um valor menor ou igual a {0}."),
-                        min: $.validator.format("Por favor, introduza um valor maior ou igual a {0}.")
-                    });
-                }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
-            <!--End mc_embed_signup-->
+                window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; fnames[6] = 'ENSINO'; ftypes[6] = 'text'; /**
+                * Translated default messages for the $ validation plugin.
+                * Locale: PT_PT
+                */
+                $.extend($.validator.messages, {
+                    required: "Campo de preenchimento obrigat&oacute;rio.",
+                    remote: "Por favor, corrija este campo.",
+                    email: "Por favor, introduza um endere&ccedil;o eletr&oacute;nico v&aacute;lido.",
+                    url: "Por favor, introduza um URL v&aacute;lido.",
+                    date: "Por favor, introduza uma data v&aacute;lida.",
+                    dateISO: "Por favor, introduza uma data v&aacute;lida (ISO).",
+                    number: "Por favor, introduza um n&uacute;mero v&aacute;lido.",
+                    digits: "Por favor, introduza apenas d&iacute;gitos.",
+                    creditcard: "Por favor, introduza um n&uacute;mero de cart&atilde;o de cr&eacute;dito v&aacute;lido.",
+                    equalTo: "Por favor, introduza de novo o mesmo valor.",
+                    accept: "Por favor, introduza um ficheiro com uma extens&atilde;o v&aacute;lida.",
+                    maxlength: $.validator.format("Por favor, n&atilde;o introduza mais do que {0} caracteres."),
+                    minlength: $.validator.format("Por favor, introduza pelo menos {0} caracteres."),
+                    rangelength: $.validator.format("Por favor, introduza entre {0} e {1} caracteres."),
+                    range: $.validator.format("Por favor, introduza um valor entre {0} e {1}."),
+                    max: $.validator.format("Por favor, introduza um valor menor ou igual a {0}."),
+                    min: $.validator.format("Por favor, introduza um valor maior ou igual a {0}.")
+                });                
+                }(jQuery));var $mcj = jQuery.noConflict(true); 
+                // 
+            </script>
+                <!--End mc_embed_signup-->
 
-
-            <!-- <div style="display: flex;    justify-content: center;">
-                <a href="https://us20.list-manage.com/contact-form?u=c473ddfdfc377a9c051740fad&form_id=a81f3baee1ce98d1d0a88312c1ae4ad8"
-                    target="_blank" class="botao" id="enviarEmail2">Receber material</a>
-            </div> -->
+                <!-- <div style="display: flex;    justify-content: center;">
+                    <a href="https://us20.list-manage.com/contact-form?u=c473ddfdfc377a9c051740fad&form_id=a81f3baee1ce98d1d0a88312c1ae4ad8"
+                        target="_blank" class="botao" id="enviarEmail2">Receber material</a>
+                </div> -->
             <p>*Se não receber o material, verifique sua caixa de SPAM.</p>
         </section>
+
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Muito obrigada pela sua inscrição!</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    </div>
+                    <div class="modal-body">
+                        <p>Em breve você receberá o mapa em seu e-mail.</p>
+                        <p>Caso queira ter um contato mais próximo, entre no meu grupo de WhatsApp.</p>
+                    </div>
+                    <div class="modal-footer">
+                        <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Não</button> -->
+                        <a type="button" class="btn btn-primary mx-auto" style="background-color: var(--cor-botao);" href="https://chat.whatsapp.com/Gyx4jUj99297XbpQLN7gXC">
+                            Clique aqui para entrar no grupo de WhatsApp
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <!-- <section>
             <div class="cartao-vazio">
@@ -210,8 +265,6 @@
                 </div>
             </div>
         </section>
-
-
     </main>
     <footer>
         <section class="cadastro-rodape">
@@ -224,7 +277,10 @@
             </div>
         </section>
     </footer>
-    <script src="./js/app.js" type="module"></script>
+    <!-- <script src="./js/app.js" type="module"></script> -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 
 </html>
