--- a/index.html
+++ b/index.html
@@ -98,9 +98,8 @@
 	            We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
             </style>
             <div id="mc_embed_signup">
-                <!-- action="https://gmail.us20.list-manage.com/subscribe/post?u=c473ddfdfc377a9c051740fad&amp;id=d35fb3291a" -->
                 <form                    
-                    action=""
+                    action="https://gmail.us20.list-manage.com/subscribe/post?u=c473ddfdfc377a9c051740fad&amp;id=d35fb3291a"
                     method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate needs-validation"
                     target="_blank" novalidate>
                     <div id="mc_embed_signup_scroll">
